syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

option go_package = "./pb";

service AuthService {
    rpc Login (Credentials) returns (AuthStatus) {}
    rpc Logout (Token) returns (AuthStatus) {}
    rpc CreateUser (Credentials) returns (AuthStatus) {}
    rpc Oauth (google.protobuf.Empty) returns (AuthURI) {}
    rpc OauthCallback (AuthCode) returns (AuthStatus) {}
}

message Credentials {
    string username = 1;
    string password = 2;
    string lastLogged = 3;
}

message Token {
    string encodedJWT = 1;
}

message AuthURI {
    string authURI = 1;
}

message AuthCode {
    string authCode = 1;
}

message AuthStatus {
    bool isLoggedIn = 1;
    string timeToExpire = 2;
    Token jwt = 3;
}